Kubernetes-Task/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-deployment
  namespace: example-namespace
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example-app
  template:
    metadata:
      labels:
        app: example-app
    spec:
      containers:
      - name: example-container
        image: busybox
        command: ["sleep", "3600"]
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config
          subPath: config.txt
      volumes:
      - name: config-volume
        configMap:
          name: example-configmap
